feat(ui): move account preferences to control
